--- a/app/views/admin/labels.html.erb
+++ b/app/views/admin/labels.html.erb
@@ -1,22 +1,28 @@
 
-<h2>
-    Here is a list of all emails you have received
-</h2>
+<% if current_user && current_user.admin%>
+    <h2>
+        Here is a list of all emails you have received
+    </h2>
 
-<table class = "table table-bordered mt-5" >
-        <tr>
-            <th>Sender</th>
-            <th>Date</th>
-            <th>Subject</th>
-            <th>Body</th>
+    <table class = "table table-bordered mt-5" >
+            <tr>
+                <th>Sender</th>
+                <th>Date</th>
+                <th>Subject</th>
+                <th>Body</th>
+                <th>Assign to </h1>
+            </tr>
+    <% @email_array.each do |email|%>
+    <tr>
+            <td><%= email[:sender]%></td>
+            <td><%= email[:date]%></td>
+            <td><%= email[:subject]%></td>
+            <td><%= email[:body]%></td>
         </tr>
-<% @email_array.each do |email|%>
-  <tr>
-        <td><%= email[:sender]%></td>
-        <td><%= email[:date]%></td>
-        <td><%= email[:subject]%></td>
-        <td><%= email[:body]%></td>
-    </tr>
+    <%end%>
+<%else%>
+    <h1>Please login first </h1>
 <%end%>
+
     
     
