add reply to emails functionality

--- a/app/views/admin/labels.html.erb
+++ b/app/views/admin/labels.html.erb
@@ -23,6 +23,7 @@
                 <%= form_for :user, url: "/emails/#{email[:mail_id]}/users" do |f|%>
                     <%= collection_select(:user, :user_id, User.where(admin: nil), :id, :name, {}, {:multiple => false})%>
                     <%= hidden_field_tag(:email_id, "#{email[:mail_id]}")%>
+                    <%= f.submit%>
                 <% end %>
             </td>
         </tr>
