--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,9 @@
     <p class="alert alert-success">"Welcome! Admin"</p>
   <% else %>
     <% if current_user%>
-    <p class="alert alert-success">"Welcome! Admin"</p>
+    <p class="alert alert-success">"Welcome! Employee"</p>
     <%end%>
-    <p class="alert alert-danger">"Please login first"</p>
+    <p class="alert alert-danger">"Please SignIn first"</p>
   <% end %>
 
   <p class="navbar-text float-right">
