--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,30 +1,44 @@
-<h1>Signup!</h1>
 
-<%= form_for :user, url: '/users' do |form| %>
+<% if current_user %>
+  <h1>Already logged in </h1>
+<%else%>
+  <h1 class = "col-md-4">Signup!</h1>
 
-    <div class="control-group">
-      <%= form.label :name %>
-      <%= form.text_field :name %>
-    </div>
-  
-    <div class="control-group">
-      <%= form.label :email %>
-      <%= form.text_field :email %>
-    </div>
-  
-    <div class="control-group">
-      <%= form.label :password %>
-      <%= form.text_field :password %>
-    </div>
-    <div class="control-group">
-      <%= form.label :password_confirmation %>
-      <%= form.text_field :password_confirmation %>
-    </div>
-  
-    <div class="actions">
-      <%= form.submit %>
-    </div>
+  <%= form_for :user, url: '/users' do |form| %>
+
+      <div class="form-group">
+        <%= form.label :name, class: "col-md-4 control-label" %>
+        <div class = "col-md-4">
+          <%= form.text_field :name, required: true, class: "form-control"%>
+        </div>
+      </div>
+    
+      <div class="form-group">
+        <%= form.label :email, class: "col-md-4 control-label" %>
+        <div class = "col-md-4">
+          <%= form.text_field :email, required: true, class: "form-control" %>
+        </div>
+      </div>
+    
+      <div class="form-group">
+        <%= form.label :password,class: "col-md-4 control-label" %>
+        <div class = "col-md-4">
+          <%= form.password_field :password , required: true, class: "form-control"%>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= form.label :password_confirmation, class: "col-md-4 control-label" %>
+        <div class = "col-md-4">
+          <%= form.password_field :password_confirmation , required: true, class: "form-control"%>
+        </div>
+      </div>
+
+      <div class = "col-md-4">
+        <%= form.submit:Submit, class: 'btn btn-success' %>
+      </div>
+<% end %>
 
 <% end %>
+
 
 
