--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 
-<%if @user.email != current_user.email||current_user.admin %>
+<%if @user.email != current_user.email %>
         <h1>Already someone is logged </h1>
-<% elseif (@user.email == current_user.email) %>
+<% elsif @user.email == current_user.email ||current_user.admin %>
     <h2>
         Here is a list of all emails you have received
     </h2>
