--- a/app/views/admin/labels.html.erb
+++ b/app/views/admin/labels.html.erb
@@ -36,7 +36,7 @@
         </tr>
     <%end%>
 <%else%>
-    <h1>Please login first </h1>
+    <h1>Please login As Admin first </h1>
 <%end%>
 
     
