--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,5 @@
-
-<% if current_user %>
-  <h1>Already logged in </h1>
+<% if current_user%>
+  <h1>Already logged in here, so you are not authorized </h1>
 <%else%>
   <h1 class = "col-md-4">Signup!</h1>
 
