--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,7 +14,7 @@
       <td><%= user.name %></td>
       <td><%= user.email %></td>
       <td><%= user.id %></td>
-      <td><%= link_to 'Show', "/user/#{user.id}"%></td>
+      <td><%= link_to 'Show Work of User', "/users/#{user.id}"%></td>
       <td><%= link_to 'Destroy', "/user/#{user.id}",
               method: :delete,
               data: { confirm: 'Are you sure?' } %></td>
