add a link in users profile

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
         <h1>you are not authorized to view somone else work </h1>
 <% elsif @user.email == current_user.email ||current_user.admin %>
 
-        <h2>
+        <h2 class = "col-md-8">
             Here is a list of all emails you have received
         </h2>
 
@@ -33,6 +33,12 @@
                 </td>
             </tr>
         <%end%>
+        </table>
+        <div class = "col-md-4">
+            <% if current_user.admin%>
+                <%= link_to 'Back', "/"%>
+            <%end%>
+        </div>
 <%else%>
     <h1>Please login first </h1>
 <%end%>
