--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,7 +36,7 @@
         </table>
         <div class = "col-md-4">
             <% if current_user.admin%>
-                <%= link_to 'Back', "/"%>
+                <%= link_to 'Back', "/labels"%>
             <%end%>
         </div>
 <%else%>
