make changes in back link in index of users

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,7 +40,7 @@
         </table>
         <div class = "col-md-4">
             <% if current_user.admin%>
-                <%= link_to 'Back', "/labels"%>
+                <%= link_to 'Back', "/usersAll/index"%>
             <%end%>
         </div>
 <%else%>
